# HAMMER

./: CMakeLists.txt  README.md
common/: defs.h
data/: pq_oid_defs.h  psql_data_provider.cpp  psql_data_provider.h
docker/: Dockerfile  Dockerfile.base  Dockerfile.base-gpu  Dockerfile.gpu  entrypoint.sh  generate_bit_packing.py
expression/simd/: simd_comparator_expression_node.h  simd_expression.h  simd_expression_node.h  simd_generic_expression.h
gpu/: fhe_column_chunk.cu  fhe_column_chunk.cuh  gpu_fhe_aggregate.cu  gpu_fhe_aggregate.cuh  gpu_fhe_backend.cu  gpu_fhe_backend.cuh  gpu_fhe_bin_metadata.cuh  gpu_fhe_column.cuh  gpu_fhe_column_table.cu  gpu_fhe_column_table.cuh  gpu_fhe_comparator.cu  gpu_fhe_comparator.cuh
operators/: basic_join.cpp  basic_join.h  block_nested_loop_join.cpp  group_by_aggregate.h  join.cpp  join.h  keyed_join.cpp  keyed_sort_merge_join.cpp  multiple_union.cpp  multiple_union.h  operator.cpp  operator.h  scalar_aggregate.cpp  secure_sql_input.cpp  sort.cpp  sort.h  sort_merge_aggregate.cpp  sort_merge_aggregate.h  stored_table_scan.cpp  stored_table_scan.h  union.cpp  union.h  zk_sql_input.cpp
operators/columnar/: column_filter.h  column_keyed_join.cpp  column_keyed_join.h  column_operator.h  column_sql_input.cpp  column_sql_input.h  fhe_aggregate.cpp  fhe_aggregate.h  fhe_filter.cpp  fhe_filter.h  fhe_project.cpp  (+9 more)
opt/: operator_cost_model.cpp  operator_cost_model.h  plan_optimizer.cpp  plan_optimizer.h
parser/: plan_parser.cpp  plan_parser.h
query_table/: buffered_column_table.cpp  buffered_column_table.h  column_table.cpp  column_table.h  computing_party_buffered_column_table.h  computing_party_packed_column_table.h  input_party_buffered_column_table.h  input_party_packed_column_table.h  packed_column_table.cpp  packed_column_table.h  protocol_type_aliases.h  query_field_desc.cpp  query_table.cpp  query_table.h  secure_tuple.cpp  secure_tuple.h
test/: CMakeLists.txt
test/fhe/: fhe_aggregate_test.cpp  fhe_base_test.cpp  fhe_base_test.h  fhe_bool_field_expression_test.cpp  fhe_columnar_test.cpp  fhe_filter_test.cpp  fhe_int_field_expression_test.cpp  fhe_keyed_join_test.cpp  fhe_plan_parser_test.cpp  fhe_poly_join_test.cpp  fhe_real_field_expression_test.cpp  fhe_string_field_expression_test.cpp  fhe_table_scan_test.cpp  fhe_tpch_test.cpp  gpu_fhe_filter_test.cpp  gpu_fhe_tpch_test.cpp  mpc_comparison_test.cpp
test/mpc/: emp_base_test.cpp  emp_base_test.h
test/support/: setup-csv.sh  tpch_alice_150.sql  tpch_bob_150.sql  tpch_empty.sql  tpch_queries.h  tpch_unioned_150.sql
test/support/csv/enrich/: alice-patient-exclusion.csv  alice-patient.csv  bob-patient-exclusion.csv  bob-patient.csv  unioned-patient-exclusion.csv  unioned-patient.csv
util/: data_utilities.cpp  data_utilities.h  dictionary_manager.cpp  dictionary_manager.h  field_utilities.cpp  field_utilities.h  google_test_flags.cpp  google_test_flags.h  monitor.h  monitor_csv.h  parsing_utilities.h  simd_plain_operations.cpp  simd_plain_operations.h  system_configuration.cpp  system_configuration.h  utilities.cpp  utilities.h
(+178 files in other folders)
